--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,6 @@ body, #root{
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #222;
-  color: white;
+  background-color: white;
+  color: black;
 }
